fixed double scrollbar on chrome OS

--- a/assets/styles/times.css
+++ b/assets/styles/times.css
@@ -1,7 +1,5 @@
 .times {
   width: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .times .row {
